# anki-mcp-server

./: LICENSE  MILESTONES.md  README.md  pyproject.toml
src/: __init__.py  japanese_utils.py  server.py
