[project]
name = "anki-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Anki integration"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "aqt",  # Anki Qt interface
    "anki",  # Anki core library
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_mcp"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]